added modals and images, fixed nav anchors

--- a/assignment3/data/modal-doc/modals.html
+++ b/assignment3/data/modal-doc/modals.html
@@ -1,8 +1,9 @@
+<!-- Life Coach -->
 <div class="modal fade" id="coachModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered" role="document">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLabel">Life Coach</h5>
+                <h3 class="modal-title" id="exampleModalLabel">Life Coach</h3>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
@@ -14,7 +15,195 @@
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                <button type="button" class="btn btn-primary">Buy</button>
+            </div>
+        </div>
+    </div>
+</div>
+<!-- Hype Man -->
+<div class="modal fade" id="hypeModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h3 class="modal-title" id="exampleModalLabel">Hype Man</h3>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <p>Did you just finish your sports drink and now need to dispense of the empty can? You're not gonna walk over to the trash and just drop it in, right? Of course not! You shout a quick "Kobe!" then full-send that bad boy across the room, sinking it flawlessly to a round of...crickets. No one was paying attention to see your epic shot. If only you'd had a Hype Man!</p>
+                <p>With the Hype Man in tow, everyone around you will be on their toes ready to cheer the second you say "Hold my beer..." In fact, with its trademark Situational Hype Event Identifier, you don't even have to give the Hype Man a heads up, it'll automatically detect when you're about to do something noteworthy, and alert everyone in the surrounding area of whats about to happen.</p>
+                <p>Become a living legend with the Hype Man!</p>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+            </div>
+        </div>
+    </div>
+</div>
+<!-- Wing Man -->
+<div class="modal fade" id="wingModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h3 class="modal-title" id="exampleModalLabel">Wing Man</h3>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <p>Hitting on someone isn't always easy. What do you say? Is that too forward? Not forward enough? How's your breath?? With the Wing Man, you'll always have the perfect approach to score with whoever catches your eye!</p>
+                <p>The Wing Man's AI was specifically developed to pick up on body language and social cues. This makes it perfect at setting you up with the perfect line or move to sweep someone off their feet. Or, for extra insurance, send the wing man ahead of you to butter them up, and then call you over to steal the show.</p>
+                <p>Become a regular Cassanova with the perfect Wing Man!</p>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+            </div>
+        </div>
+    </div>
+</div>
+<!-- Jokester -->
+<div class="modal fade" id="jokeModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h3 class="modal-title" id="exampleModalLabel">Jokester</h3>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <p>Are you down in the dumps? Depressed? Ormaybe you just need a little pick-me-up. No worries, Now you can have gutbusting humor whenever you're down the Jokester!</p>
+                <p>The Jokester has algorithms that crawl the vast depths of the web to find the best jokes, riddles, any and all humourous lines. Plus, it comes equipped with our all new, patent-pending Humor Processing software which allows the Jokester to not only parse through and pinpoint funny jokes, but actually come up with it's own jokes based on any input. Plus, if you're so inclined, the Jokester never cares if you steal it's jokes!</p>
+                <p>Always have a smile on your face with the Jokester!</p>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+            </div>
+        </div>
+    </div>
+</div>
+<!-- Cool Nanny -->
+<div class="modal fade" id="nanModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h3 class="modal-title" id="exampleModalLabel">Cool Nanny</h3>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <p>Here at Entourage Inc. we live by the credo "Always leave a place cleaner than you found it." Of course, sometimes its hard not to make a mess, and god forbid you find yourself with a handful of trash with no garbage can in sight. Never fear, the Cool Nanny is here!</p>
+                <p>The Cool Nanny comes equipped with the best cleaning and trash identification software on earth. Not a spec of dust goes by that it won't notice and subsequently take care of. With this bot in you midst, you'll always leave the room sparklingly clean. And don't worry about losing street cred for havingyour Nanny follow around, becaus the Cool Nanny always wears stylish shades, and dishes out sick burns and witty quips on the regular to impress any and all.</p>
+                <p>Never leave a trace with your very own Cool Nanny!</p>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+            </div>
+        </div>
+    </div>
+</div>
+<!-- DJ -->
+<div class="modal fade" id="djModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h3 class="modal-title" id="exampleModalLabel">Personal DJ</h3>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <p>Have you ever wished your life could have a soundtrack? Well it's time to make that wish a reality witht the personal DJ!</p>
+                <p>The Personal DJ is like the ultimate music streaming service and poratble sounds system, all wrapped up in one person shaped package! Wanna chill out to your favorite playlist? Wnat to make turn your morning commute into a montage from your favorite movie genre? Want to fin new music to groove to when you're hanging out with your friends? Leave it all to the Personal DJ!</p>
+                <p>Live to the beat of your own drum (literally) with the Personal DJ</p>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+            </div>
+        </div>
+    </div>
+</div>
+<!-- Fit Bot -->
+<div class="modal fade" id="fitModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h3 class="modal-title" id="exampleModalLabel">Fit Bot</h3>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <p>Getting shape is hard. Consistency, working out, scheduling, dieting. There's too  much to keep track of, and with such an overwhelming task its no wonder why its practically impossibls to keep those new years resolution. Well, not with the Fit Bot!</p>
+                <p>The Fit Bot is your personal trainer. Fueled on training and health knowledge gathered from numerous sources, the Fit Bot can manage your diet, your gym schedule, your workouts, and more, to make sure you get in the best shape andyou STAY in the best shape!</p>
+                <p>Become youre best you with the Fit Bot</p>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+            </div>
+        </div>
+    </div>
+</div>
+<!-- Foodie -->
+<div class="modal fade" id="foodModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h3 class="modal-title" id="exampleModalLabel">Foodie</h3>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <p>"Where should we go out for dinner?" Everyone's least favorite question. Your stomach can be one tough customer, and trying to decide what and where to eat is more often than not an exercise in frustration. Well, no more. Just put your trust in the Foodie!</p>
+                <p>The Foodie has a large catalogue of restaraunts and eateries, both large and local, to help you choose the food you want. It'll even recommednd what food and drinks to order. But as if that wasn't enough, Foodie lets you dine on a dime by acting as your own personal chef!</p>
+                <p>Eat like royalty with the Foodie!</p>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+            </div>
+        </div>
+    </div>
+</div>
+<!-- Know-It-All -->
+<div class="modal fade" id="knowModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h3 class="modal-title" id="exampleModalLabel">Know-It-All</h3>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <p>What was that dreamworks movie starring Mike Myers? Who's the band that sings that song 'All Star'? What's a toadstool? No matter what silly question pops into you head, the answer is only seconds away with the Know-It-All.</p>
+                <p>Gone are the days of pulling out your phone to google something. Now you have the whole wealth of the worlds knowledge at the tip of your tongue. Just ask the Know-It-All! This bot runs on our very own search engine, taking the best algorithms from engines like Google and Bing, bbut optimized perfectly to work with our own AI algorithms. So far we haven't found a question this bot COULDN'T answer!</p>
+                <p>With this bot, you too can Know-It-All!</p>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+            </div>
+        </div>
+    </div>
+</div>
+<!-- Stylist -->
+<div class="modal fade" id="styleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h3 class="modal-title" id="exampleModalLabel">Stylist</h3>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <p>Style. Fashion. To some, its all they know, to others these are pure mystery. Well no longer. Now you can always look your best with the Stylist!</p>
+                <p>The Stylist has complex matching algorithms for colors, patterns, and anything else related to what you wear, which will ensure that no matter what your wardrobe, you can always leave the house looking fresh to death. Plus, it'll make suggestions when you're looking to pick up some new clothes, learning what you like and basing info off of what you already own to make clothes shopping a breeze.</p>
+                <p>Make the world your runway with the stylist!</p>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
             </div>
         </div>
     </div>
