--- a/image_chat/server/src/index.html
+++ b/image_chat/server/src/index.html
@@ -5,30 +5,29 @@
   <title>Image Chat</title>
 </head>
 
-<h2>Image Chat</h2>
+<h1>Image Chat</h1>
 
 <body>
-  <form action="" target="_self">
-    Username:
+  <form target="_self">
+    <label for="username">Username:</label>
     <input id="username" autocomplete="off" />
     <br>
-    Message:
+    <label for="message">Message:</label>
     <input id="message" autocomplete="off" />
     <br>
-    Image query:
+    <label for="query">Image Query:</label>
     <input id="query" autocomplete="off" />
     <br>
     <button>Send</button>
   </form>
   <hr>
   <div>
-    <p id="bottom"></p>
+    <hr id="bottom">
   </div>
 </body>
 <script src="/socket.io/socket.io.js"></script>
 <script src="https://code.jquery.com/jquery-1.11.1.js"></script>
 <script>
-
   var target = $('#bottom');
   var count = 0;
 
@@ -49,21 +48,21 @@
 
     socket.on('chat message', function (response) {
       var newId = `message_${count}`
-      var newElement = document.createElement('div');
+      var newElement = document.createElement('p');
       newElement.id = newId;
 
       target.prepend(newElement);
 
       $(`#${newId}`).append(`<br>`)
       $(`#${newId}`).append($(`<p>`).text(`${response.username}: ${response.message}`));
-      
+
       var images = response.images;
-      for (var i = 0; i < images.length; i++){
-        var image = `<img src=${images[i]} height=100>`;
+      for (var i = 0; i < images.length; i++) {
+        var image = `<img src=${images[i]} height=100 alt='${i}'>`;
         $(`#${newId}`).append(image);
       }
-      
-      target.prepend(newElement);
+
+      target.before(newElement);
       target = $(`#message_${count}`)
       count++;
 
