added familyTree and updates to imagechat

--- a/image_chat/server/src/index.html
+++ b/image_chat/server/src/index.html
@@ -10,14 +10,11 @@
 <body>
   <form target="_self">
     <label for="username">Username:</label>
-    <input id="username" autocomplete="off" />
-    <br>
+    <input id="username" autocomplete="off" /><br>
     <label for="message">Message:</label>
-    <input id="message" autocomplete="off" />
-    <br>
+    <input id="message" autocomplete="off" /><br>
     <label for="query">Image Query:</label>
-    <input id="query" autocomplete="off" />
-    <br>
+    <input id="query" autocomplete="off" /><br>
     <button>Send</button>
   </form>
   <hr>
